--- a/assets/index.html
+++ b/assets/index.html
@@ -13,10 +13,11 @@
 <body>
     <button id="btn-open-video" class="button outline large alert w-100">Open Video</button>
     <div id="my-video">
-
+        <!-- video akan dipasang di sini -->
     </div>
 
     <script>
+        // cara import jquery di renderer process
         window.jQuery = require('./vendor/jquery/jquery.min.js');
         window.$ = window.jQuery;
     </script>
