--- a/assets/index.html
+++ b/assets/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="vendor/metrocss/css/metro-all.min.css">
 
-    <title>SHBVideoPlayer</title>
+    <title>SHBELVideoPlayer</title>
 </head>
 
 <body>
