--- a/video_player/src/windowhome/renderer.html
+++ b/video_player/src/windowhome/renderer.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="../vendor/metrocss/css/metro-all.min.css">
 
   <!-- judul header -->
-  <title>SHB EL Video Player</title>
+  <title>Video Player</title>
 </head>
 
 <body>
